# BE

./: pyproject.toml  requirements.txt  root_router.py  server.py
auth/: __init__.py  auth_router.py
auth/dto/: __init__.py  login_req.py
common/kakao_map/: api_client.py
common/memcache/: __init__.py  database.py
common/postgres/: __init__.py  database.py
common/postgres/crud/: __init__.py  base.py
common/postgres/models/: __init__.py  base.py
common/tmap/: api_client.py
locations/: __init__.py  route.py
locations/favorite/: __init__.py  dto.py  favorite.py  favorite_crud.py  favorite_router.py
locations/routes/: __init__.py  dto.py  route.py  route_crud.py  route_router.py
locations/track/: __init__.py  track_dto.py  track_router.py
src/domain/: root_router.py
src/domain/dto/: responses.py
users/: __init__.py  user.py  user_crud.py  user_dto.py  user_router.py
users/caregivers/: __init__.py  caregiver.py  caregiver_crud.py  caregiver_router.py  caretaker_router.py  dto.py
users/dto/: user_alert_update_res.py  user_profile_alert_res.py  user_profile_get_res.py  user_profile_update_req.py  user_profile_update_res.py
users/safety_area/: safety_area.py
users/safety_areas/: __init__.py  dto.py  safety_area.py  safety_area_crud.py  safety_area_router.py
