[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "geoalchemy2>=0.18.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pymemcache>=4.0.0",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.24",
    "ulid>=1.1",
    "uvicorn>=0.35.0",
]
